# enigma2

./: .travis.yml  AUTHORS  BoxBrandingTest.py  Navigation.py  PowerTimer.py  README.md  RecordTimer.py  configure.ac  enigma2.bb  keyids.py  mytest.py  skin.py  timer.py  timers.xml  upgrade.py
.github/workflows/: enigma2.yml  github-actions-fetching-upstream.yml  updatepo.yml  updatepot.yml
data/: Makefile.am  encoding.conf  keymap.ntr  keymap.u80  keymap.usr  keymap.xml  keymap.xpe  menu.xml  menu.xml.rar  setup.xml  skin_text_clock.xml  startwizard.xml  unicable.xml  userinterfacepositionerwizard.xml  videowizard.xml
data/7segment/: skin_display.xml
data/countries/: Makefile.am
data/defaults/: Makefile.am  blacklist  bouquets.tv  lamedb  settings  userbouquet.vh01.radio  userbouquet.vh01.tv  userbouquet.vh03.radio  userbouquet.vh03.tv  userbouquet.vh04.tv  userbouquet.vh05.tv  userbouquet.vh06.tv  userbouquet.vh07.tv  userbouquet.vh08.tv  userbouquet.vh09.tv  userbouquet.vh10.tv  userbouquet.vh11.tv  userbouquet.vh12.tv  userbouquet.vh13.tv  userbouquet.vh14.tv  userbouquet.vh15.tv  userbouquet.vh16.tv  userbouquet.vh18.tv  userbouquet.vh19.tv  userbouquet.vh20.tv  userbouquet.vh208.tv  userbouquet.vh21.tv  userbouquet.vh22.tv  userbouquet.vh23.tv  userbouquet.vh24.tv  userbouquet.vh25.tv  userbouquet.vh28.tv  userbouquet.vh29.tv  userbouquet.vh30.tv  userbouquet.vh31.tv  userbouquet.vh32.tv
data/display220/: skin_display.xml  skin_display_analog_blue.xml  skin_display_analog_bred.xml  skin_display_analog_bwhite.xml  skin_display_analog_orange.xml  skin_display_analog_red.xml  skin_display_analog_white.xml  skin_display_klappuhr_blue.xml
data/display390/: skin_display.xml  skin_display_00.xml  skin_display_01.xml  skin_display_02.xml  skin_display_03.xml  skin_display_04.xml  skin_display_05.xml  skin_display_picon_01.xml  skin_display_picon_02.xml  skin_display_picon_03.xml  skin_display_picon_04.xml  (+6 more)
data/fonts/: Makefile.am
include/: nanosvg.h
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/DiseqcTester/: plugin.py
lib/python/Plugins/SystemPlugins/FastScan/: plugin.py
lib/python/Plugins/SystemPlugins/HdmiCEC/: plugin.py
lib/python/Plugins/SystemPlugins/Hotplug/: plugin.py
lib/python/Plugins/SystemPlugins/LCNScanner/: plugin.py
lib/python/Plugins/SystemPlugins/NetworkWizard/: NetworkWizard.py  networkwizard.xml
lib/python/Plugins/SystemPlugins/PositionerSetup/: plugin.py
lib/python/Plugins/SystemPlugins/Satfinder/: plugin.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: BackupRestore.py  Flash_online.py  ImageBackup.py  ImageWizard.py  Makefile.am  Multibootmgr.py  ShellCompatibleFunctions.py  SoftwareTools.py  backup.sh  imagewizard.xml  plugin.py  plugin.py_
lib/python/Plugins/SystemPlugins/WirelessLan/: Wlan.py  plugin.py
m4/: tuxbox.m4
main/: bsod.cpp  enigma.cpp
po/: Makefile.am  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  en_AU.po  en_GB.po  enigma2.pot  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hk.po  hr.po  hu.po  id.po  is.po  it.po  ku.po  lt.po  lv.po  nb.po  nl.po  nn.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  (+9 more)
tests/: test_timer.py
tools/: Makefile.am  enigma2.sh.in  libopen.c
(+383 files in other folders)
