installdir = $(pkgdatadir)/defaults

dist_install_DATA = \
	interfaces \
	whitelist \
	bouquets.tv \
	bouquets.radio \
	blacklist \
	settings \
	lamedb \
	userbouquet.vh01.radio \
	userbouquet.vh01.tv \
	userbouquet.vh02.radio \
	userbouquet.vh02.tv \
	userbouquet.vh03.radio \
	userbouquet.vh03.tv \
	userbouquet.vh04.tv \
	userbouquet.vh05.tv \
	userbouquet.vh06.tv \
	userbouquet.vh07.tv \
	userbouquet.vh08.tv \
	userbouquet.vh09.tv \
	userbouquet.vh10.tv \
	userbouquet.vh11.tv \
	userbouquet.vh12.tv \
	userbouquet.vh13.tv \
	userbouquet.vh14.tv \
	userbouquet.vh15.tv \
	userbouquet.vh16.tv \
	userbouquet.vh18.tv \
	userbouquet.vh19.tv \
	userbouquet.vh20.tv \
	userbouquet.vh21.tv \
	userbouquet.vh22.tv \
	userbouquet.vh23.tv \
	userbouquet.vh24.tv \
	userbouquet.vh25.tv \
	userbouquet.vh26.tv \
	userbouquet.vh27.tv \
	userbouquet.vh28.tv \
	userbouquet.vh29.tv \
	userbouquet.vh30.tv \
	userbouquet.vh31.tv \
	userbouquet.vh32.tv \
	userbouquet.vh207.tv \
	userbouquet.vh208.tv