installdir = $(datadir)/fonts

dist_install_DATA = \
	ae_AlMateen.ttf \
	allru.ttf \
        allruf.ttf \
        allruk.ttf \
        analog.ttf \
        andale.ttf \
        Army_Bold_G.ttf \
        army-digital.ttf \
        Army_Regular_L.ttf \
        Avante.ttf \
        blue.ttf \
        DroidSans-Bold.ttf \
        ds_digital.ttf \
        goodtime.ttf \
        hd.ttf \
        HandelGotD.ttf \
        HandelGotD.ttf_ \
        HandelGotDBol.ttf \
        lcd.ttf \
        LiberationSans-Bold.ttf \
        LiberationSans-BoldItalic.ttf \
        LiberationSans-Italic.ttf \
        LiberationSans-Regular.ttf \
        lt6-ps.ttf \
        md_khmurabi_10.ttf \
        MyriadPro-Regular.otf \
        MyriadPro-Semibold.otf \
        MyriadPro-SemiboldIt.otf \
        nmsbd.ttf \
        nmsbd2.ttf \
        tpb.otf \
        tpb.ttf \
        tuxtxt.otb \
        verdana.ttf \
        tuxtxt.ttf_ 

if VUULTIMO
dist_install_DATA += analog.ttf MyriadPro-Regular.otf MyriadPro-Semibold.otf MyriadPro-SemiboldIt.otf
endif

if VUDUO2
dist_install_DATA += analog.ttf MyriadPro-Regular.otf MyriadPro-Semibold.otf MyriadPro-SemiboldIt.otf
endif

if ET10000
dist_install_DATA += analog.ttf MyriadPro-Regular.otf MyriadPro-Semibold.otf MyriadPro-SemiboldIt.otf
endif

if SKYLAKE
dist_install_DATA += analog.ttf MyriadPro-Regular.otf MyriadPro-Semibold.otf MyriadPro-SemiboldIt.otf
endif

if INIHDP
dist_install_DATA += analog.ttf MyriadPro-Regular.otf MyriadPro-Semibold.otf MyriadPro-SemiboldIt.otf
endif

if ET8500
dist_install_DATA += verdana.ttf
endif


















